--- a/회의록/3월 27일 팀별미팅1.md
+++ b/회의록/3월 27일 팀별미팅1.md
@@ -1,12 +1,12 @@
 # 팀별미팅1
-### 미팅 장소
-320호실
-### 참여자
+## 미팅 장소
+319호실
+
+## 참여자
 손수현, 최민준, 장호영, 신민호, 배인영<br>
 이익훈 교수님
 
-
-# 교수님의 조언
+## 교수님의 조언
 사용자와 시스템을 잘 나누어야 합니다.<br>
 사용자와 사용자끼리도 잘 나누어야 하고, 시스템과 시스템끼리도 잘 나누어야 합니다.<br>
 github에서 실시간으로 정보를 주고받아야 합니다.<br>
