--- a/회의록/4월 10일 팀별미팅2.md
+++ b/회의록/4월 10일 팀별미팅2.md
@@ -7,7 +7,8 @@
 이익훈 교수님<br>
 
 ## Q&A
-추가중...
+### AI는  실제 포트홀을 감지하는데, 시연은 모형입니다.
+작은 크기만 되었을 뿐이지, 인식할 때는 똑같이 인식되어야 합니다.
 
 ## 교수님의 조언
 기본적으로 수업시간 있는날 1번, 없는날 1번, 회의를 지속적으로 해야한다.<br>
@@ -18,6 +19,7 @@
 <br>
 <br>
 <br>
+
 ### 요구사항 정의서
 개발자 입장의 시각에서 바라본것은 잘못된 접근이다.<br>
 기능에서 모든 요구사항은 사용자로부터 나와야 한다.<br>
@@ -40,6 +42,7 @@
 <br>
 <br>
 <br>
+
 ### 업무 흐름도
 업무 흐름도는 사용자 입장의 업무 흐름이다.<br>
 
@@ -56,6 +59,20 @@
 
 요구사항 정의서와 업무 흐름도는 사용자 입장에서 적어야 한다.<br>
 만약, 개발자 입장에서 적게 되면 뒤죽박죽이 되므로 빨리 수정해야 한다.<br>
+
+<br>
+<br>
+<br>
+
+사용자의 편의성을 고민해야 합니다.<br>
+너무 차량과 장치에 대한 고민이 치우쳐져있습니다.<br>
+사용자 입장에서 더 고려해야 합니다.<br>
+조사를 더 많이 해야합니다.<br>
+<br>
+앞서 서비스를 무엇을 만들지, 어떤 편의를 제공할 지 생각해야 했습니다.<br>
+<br>
+힌트를 주자면, 포트홀 발생 내용을 통한 빅데이터를 분석할 수 있는 기능 등이 있어야 합니다.
+
 
 
 
