--- a/회의록/4월 17일 팀별미팅3.md
+++ b/회의록/4월 17일 팀별미팅3.md
@@ -96,6 +96,23 @@ Hole in One Q박스 안에 있는 '도로 데이터 조회, 도로 보수 요청
 <br>
 "도로 데이터 조회"는 무엇을 검색할지에 따라 다 다르기 때문에, 더 자세히 해야합니다.<br>
 '사용자가 입력하는것'나 '사용자가 선택하는것'이 다 나와야 합니다.<br>
+이 모든걸 다 합친 것이 , "도로 포트홀 데이터 조회"여야 합니다.<br>
+<br>
+
+### 웹페이지
+"도로별 위험 분석"은 "어떤 값"을 넣는건지, 뭘 하는건지 자세히 다 나와야 합니다.<br>
+<br>
+<br>
+<br>
+<br>
+
+### 마무리
+이 상태에서 화면설계를 시작하게 되면, 스스로 모든걸 창조해야 하기 때문에 굉장히 힘듭니다.<br>
+자세히 만들어야 합니다.<br>
+
+업무는 사용자 입장으로 생각해야 합니다<br>
+
+
 <br>
 <br>
 <br>
