4월 17일 팀별미팅3 중간완료

--- a/회의록/4월 17일 팀별미팅3.md
+++ b/회의록/4월 17일 팀별미팅3.md
@@ -118,6 +118,62 @@ Hole in One Q박스 안에 있는 '도로 데이터 조회, 도로 보수 요청
 <br>
 
 
+---
+
+
+
+
+업무는 사용자 입장으로 생각해야 한다
+포트홀 데이터 db저장? "사용자"에게 "db저장 버튼" 이런게 있는것도 아니다.
+
+
+사용자가 업무를 할때 하는 기능이 아니므로 떨어져 나와야 한다.
+
+
+사용자와 시스템은 모양이 다르게 표시되어야 한다.
+
+
+
+시스템 내부에서 작동하는 것은 원래 업무 흐름도에 있는것이 아니다.
+업무 흐름도는 오직 사용자가 "뭘 입력,조회"하는지 따로 해야한다.
+
+
+
+측정 도로 지정?
+
+
+정기적인 측정이 있으면 좋을거 같다.
+
+
+
+
+
+국토교통부 등에서 사용하는 용어로 써야 한다.
+현장에서 실제로 쓰는 용어와 업무로 해야한다.
+우리가 직접 창조해서 하면 안된다
+
+우리 업무 규정하고 맞지 않습니다
+우리 업무 법에 맞지 않습니다
+이런 이야기가 나오면 안된다.
+--> 사용자를 이해하는 것이다
+
+
+
+시스템이 사각형이면, 사용자는 타원형인것 
+이런 느낌으로 분리해야 한다.
+
+
+
+포트홀 관리 규정을 봐봤나?
+
+
+
+기술과 사람에 대한 이해가 합쳐져야 한다.
+
+
+
+
+"실제 사용에서는 이렇게 된다"하고 "시연에서는 어떻게 할지"를 생각하면 된다.
 
 
 
